sandbox-codebase/objects/mone__Mailchimp_Group__c/mone__Mailchimp_Group__c.object-meta.xml
<CustomObject>
    <description>Manage groups/interests for a specific Mailchimp list. Assign subscribers to interests to group them together. Interests are referred to as &apos;group names&apos; in the Mailchimp application.</description>
    <label>Mailchimp Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>