sandbox-codebase/objects/mone__Mailchimp_Group__c/fields/mone__Group_Category__c.field-meta.xml
<CustomField>
    <fullName>mone__Group_Category__c</fullName>
    <inlineHelpText>Look up to the unique ID for the interest category.</inlineHelpText>
    <label>Group Category</label>
    <referenceTo>mone__Mailchimp_Group_Category__c</referenceTo>
    <relationshipLabel>Mailchimp Groups</relationshipLabel>
    <relationshipName>Mailchimp_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>