sandbox-codebase/objects/mone__Mailchimp_Group__c/fields/mone__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Group_Name__c</fullName>
    <inlineHelpText>The name of the group/interest. This can be shown publicly on a subscription form.</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>