sandbox-codebase/objects/mone__Mailchimp_Group__c/fields/mone__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Job_Id__c</fullName>
    <inlineHelpText>Internal. The Salesforce Job Id which created these records.</inlineHelpText>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>