sandbox-codebase/objects/mone__Mailchimp_Group__c/fields/mone__Mailchimp_List__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_List__c</fullName>
    <inlineHelpText>Lookup to the Mailchimp List</inlineHelpText>
    <label>Mailchimp List</label>
    <referenceTo>mone__Mailchimp_List__c</referenceTo>
    <relationshipLabel>Mailchimp Groups</relationshipLabel>
    <relationshipName>Mailchimp_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>