sandbox-codebase/objects/mone__Mailchimp_Group__c/fields/mone__Member_Count__c.field-meta.xml
<CustomField>
    <fullName>mone__Member_Count__c</fullName>
    <inlineHelpText>The number of members/subscribers associated with this interest.</inlineHelpText>
    <label>Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>